--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,13 @@
 	  		<artifactId>struts-taglib</artifactId>
       		<version>1.3.10</version>
    	   </dependency>
+   	   <!-- https://mvnrepository.com/artifact/org.apache.struts/struts-tiles -->
+		<dependency>
+		    <groupId>org.apache.struts</groupId>
+		    <artifactId>struts-tiles</artifactId>
+		    <version>1.3.8</version>
+		</dependency>
+   	   
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
